--- a/client/index.html
+++ b/client/index.html
@@ -26,5 +26,15 @@
 
     <p id='hello-text'>Hello World!</p>
     <p id='repeat-text'></p>
+
+    <form id ='food-form'>
+        <label>
+        <input type="text" name="food" placeholder="Enter a Food">
+        <button type="submit" id="food-button">Add Food to List</button>
+        </label>
+    </form>
+
+    <div id="food-container"></div>
+
 </body>
 </html>
